--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/img/1.jpg" style="height: 250px; width: 250px;"  id="img">
+    <img src="img/1.jpg" style="height: 250px; width: 250px;"  id="img">
     <br>
     <span id="text">Génère du texte !</span>
     <br>
